<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta"
        android:textColor="@color/white"
        android:background="@color/alpha_red"
        android:drawableStart="@drawable/answer_ballon"
        android:drawableLeft="@drawable/conductor_designado_40"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_refugio"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:civ_border_width="1.5dp"
        app:civ_border_color="@color/red"
        android:src="@drawable/error_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_text_error"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/other_acc_button_bg"
        android:textColor="@color/white"
        android:text="@string/ok" />

</LinearLayout>